--- a/JavascriptBasics/ourwebpage.html
+++ b/JavascriptBasics/ourwebpage.html
@@ -1,9 +1,19 @@
 <html>
-    <script>
-        document.write("This is our javascript being written before anything else");
-    </script>
+    
+    <head>
+        
+    </head>
 
     <body>
         <h1> This is our title that goes here </h1>
+
+        <p> This is a paragraph of text </p>
+
+        <script src="myjs.js"></script>
     </body>
+
+    <footer>
+        <script src="js.js"></script>
+    </footer>
+
 </html>
